[gd_scene load_steps=5 format=2]

[ext_resource path="res://Entities/Goal/Goal.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Music/necrobonatist_fanfare.ogg" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="Goal" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.968627, 1, 0, 1 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="VictoryFanfare" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="finished" from="VictoryFanfare" to="." method="_on_VictoryFanfare_finished"]
